--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
         <nav>
             <div class="nav__left">
                 <ul>
-                    <li><span class="burger-menu"></span></li>
-                    <li><a href="">ALL</a></li>
+                    <li><a href=""><span class="burger-menu"></span></a>
+                    </span></li>
+                    <li><a class="all-item" href="">ALL</a></li>
                     <li><a href="">IMAGES</a></li>
                 </ul>
             </div>
             <div class="nav__right">
                 <ul>
-                    <li><span class="dots-menu">dots</span></li>
-                    <li><button>Sign in</button></li>
+                    <li><a href=""><span class="dots-menu"></span></a></span></li>
+                    <li><button class="sign-in-button">Sign in</button></li>
                 </ul>
             </div>
         </nav>
