styling main section

--- a/index.html
+++ b/index.html
@@ -27,7 +27,17 @@
             </div>
         </nav>
     </header>
-    <main></main>
+    <main>
+        <div class="main-container">
+            <img class="main-logo" src="./assets/imgs/google-logo.png" alt="Google logo 2021">
+            <div class="main__search-bar">
+                <span class="search-icon"></span>
+                <input class="main__search-input" type="text">
+                <span class="mic-icon"></span>
+            </div>
+        </div>
+ 
+    </main>
     <footer></footer>
 </body>
 </html>
