--- a/index.html
+++ b/index.html
@@ -36,8 +36,23 @@
                 <span class="mic-icon"></span>
             </div>
         </div>
- 
     </main>
-    <footer></footer>
+    <footer>
+        <section class="footer__country">
+            <P>Mexico</P>
+        </section>
+        <section class="footer__info">
+            <div class="info__left">
+                <a href="">Settings</a>
+                <a href="">Privacy</a>
+                <a href="">Terms</a>
+            </div>
+            <div class="info__rigjt">                
+                <a href="">Advertising</a>
+                <a href="">Business</a>
+                <a href="">About</a>
+            </div>
+        </section>
+    </footer>
 </body>
 </html>
