--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
             <P>Mexico</P>
         </section>
         <section class="footer__info">
-            <div class="info__left">
+            <div class="info-left">
                 <a href="">Settings</a>
                 <a href="">Privacy</a>
                 <a href="">Terms</a>
             </div>
-            <div class="info__rigjt">                
+            <div class="info-right">                
                 <a href="">Advertising</a>
                 <a href="">Business</a>
                 <a href="">About</a>
