--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Google clone with html and css">
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./desktop.css" media="(min-width: 800px)">
     <title>Google</title>
 </head>
 <body>
