desktop search buttons done

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </ul>
             </div>
         </nav>
-        <nav class="desktop-nav">
+        <nav class="desktop-nav desktop-styles">
             <ul>
                 <li><a href="#">Gmail</a></li>
                 <li><a href="#">Images</a></li>
@@ -44,6 +44,10 @@
                 <span class="search-icon"></span>
                 <input class="main__search-input" type="text">
                 <span class="mic-icon"></span>
+            </div>
+            <div class="main__buttons-container desktop-styles">
+                <button>Google Search</button>
+                <button>I'm Feeling Lucky</button>
             </div>
         </div>
     </main>
